fix layout for signup page due to uneven css grid issues

--- a/site/signup.css
+++ b/site/signup.css
@@ -1,55 +1,74 @@
 
 .grid-container-top {
 	display: grid;
-	grid-template-columns: auto auto auto ;
+	grid-template-columns: 300px 300px 200px 200px ;
+	grid-template-rows: 100px 100px 100px 100px 100px 100px 100px;
 	background-color: #ffffff;
-	padding-top: 175px;
-	padding-left: 300px;
-	padding-right: 300px;
-}
-
-.grid-container-bottom {
-	display: grid;
-	grid-template-columns: auto auto auto;
-	background-color: #ffffff;
-	padding-bottom: 100px;
-	padding-left: 300px;
-	padding-right: 300px;
-}
-
-.grid-item {
-  background-color: #e0e0e0;
-  padding-top: 80px;
-  padding-bottom: 15px;
-  padding-right: 25px;
-  font-size: 30px;
-  text-align: center;
-}
-.grid-container-1 {
-	display: inline-grid;
-	grid-template-columns:  auto auto ;
-	background-color: #2196F3;
-	padding-top: 175px;
-	padding-bottom: 100px;
-	padding-left: 300px;
-	padding-right: 300px;
+	padding-top:10%;
 }
 
 .title {
-  grid-column: 1 / span 3;
-  padding-top: 80px;
-  background-color: #e0e0e0;
   font-size: 40px;
   text-align: center;
+  grid-row: 1/3;
+  grid-column:2/3;
 }
-
 
 .item1 {
-  grid-column: 1 / span 2;
-  padding-top: 80px;
-  background-color: #e0e0e0;
+  grid-column: 2/3;
+  grid-row: 2/3;
   font-size: 40px;
   text-align: center;
 }
 
+.item2 {
+	grid-column: 2/3;
+	grid-row: 3/4;
+	font-size: 40px;
+	text-align: center;
+}
 
+.item3 {
+	grid-column: 2/3;
+	grid-row: 4/5;
+	font-size: 40px;
+	text-align: center;
+}
+
+.item4 {
+	grid-column: 2/3;
+	grid-row: 5/6;
+	font-size: 40px;
+	text-align: center;
+}
+
+.grid-item1 {
+	 font-size: 30px;
+	 text-align: center;
+	 grid-column:3/4;
+	 grid-row:2/3;
+ }
+
+.grid-item2 {
+	font-size: 30px;
+	text-align: center;
+	grid-column:3/4;
+	grid-row:3/4;
+}
+.grid-item3 {
+	font-size: 30px;
+	grid-column:3/4;
+	grid-row:4/5;
+}
+.grid-item4 {
+	font-size: 30px;
+	text-align: center;
+	grid-column:3/4;
+	grid-row:5/6;
+}
+.grid-item5 {
+	font-size: 30px;
+	text-align: center;
+	grid-column:3/4;
+	grid-row:6/7;
+}
